# gamza_lib

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  char.cpp  char.h
